# glogout

./: .gitignore  .mcp.json  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  glogout_spec.md
.github/workflows/: ci.yml
.wiki/: AurPublishingPlan.md  DaemonMode.md  HotReloadLoopBug.md  HotReloadScope.md  MultiMonitorPlacement.md  SpikeFindings.md  StackDecision.md  SurfaceTransparency.md
contrib/: glogout.service
src/: action.rs  config.rs  daemon.rs  init.rs  main.rs  ui.rs  watch.rs  window.rs
