[package]
name = "glogout"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
gtk4 = "0.11"
gtk4-layer-shell = "0.8"
webkit6 = "0.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
notify = "8"
notify-debouncer-full = "0.5"
async-channel = "2"
