[package]
name = "glogout"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "A Wayland logout menu themed with real HTML, CSS, and JavaScript — no GTK theme inheritance."
repository = "https://github.com/synnode/glogout"
homepage = "https://github.com/synnode/glogout"
readme = "README.md"
keywords = ["wayland", "logout", "layer-shell", "hyprland", "webkit"]
categories = ["command-line-utilities"]

[dependencies]
gtk4 = "0.11"
gtk4-layer-shell = "0.8"
webkit6 = "0.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
notify = "8"
notify-debouncer-full = "0.5"
async-channel = "2"
